# novel-rust

./: .env  Cargo.toml  LICENSE  README.md  conf.json  使用说明.txt
public/common/js/: history.js  sys.js  user.js
public/default/css/: base.css  index.css  info.css  rank.css  reader.css  sort.css  user.css
public/default/js/: base.js  reader.js  sort.js
src/: app.rs  main.rs
src/handlers/: author.rs  chapter.rs  define.rs  history.rs  index.rs  index_list.rs  info.rs  mod.rs  rank.rs  search.rs  sort.rs
src/handlers/admin/: index.rs
src/handlers/user/: bookcase.rs  login.rs  mod.rs  register.rs
src/models/: config.rs  mod.rs  novel.rs  user.rs
src/routes/: app.rs
src/services/: json.rs  lang_tail.rs  mod.rs  novel.rs  user.rs
src/utils/: conf.rs  cookie.rs  error.rs  file.rs  mod.rs  request.rs  text.rs
src/utils/db/: conn.rs  db.rs  mod.rs
src/utils/redis/: conn.rs
src/utils/templates/: db.rs  init.rs  mod.rs  render.rs  str.rs
templates/: admin.html
templates/default/: author.html  chapter.html  history.html  index.html  index_list.html  info.html  rank.html  search.html  sort.html  top.html
templates/default/components/: footer.html  header.html
templates/default/user/: bookcase.html  login.html  register.html
