[package]
name = "lime_novel"
version = "0.10.4"
edition = "2024"

[dependencies]
# openssl = { version = "0.10.75", features = ["vendored"] } # linux请解开此注释
mimalloc = "0.1"
axum = "0.8"
axum-extra = { version = "0.12.0", features = ["cookie"] }
cookie = "0.18"
tower-http = { version = "0.6", features = ["compression-gzip", "fs"] }
# Tera模板引擎
tera = { version = "1.20.1", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# SeaORM核心
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "serde_json"] }
redis = { version = "1.0.2", features = ["json", "aio", "tokio-comp"] }
dotenv = "0.15"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.21.3"
regex = "1.12.2"
html-escape = "0.2"
urlencoding = "2"
chrono = { version = "0.4.42", features = ["serde"] }
md5 = "0.8"
reqwest = { version = "0.13.1", features = ["json", "native-tls"] }
thiserror = "2.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1"
mime = "0.3.17"
url = "2.5.8"
rand = "0.9.2"
unicode-segmentation = "1.12"
time = "0.3.47"
hex = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
arc-swap = "1.8"
[profile.release]
opt-level = 3          # 最高级别优化（默认）
lto = true             # 链接时优化（大幅减小体积，编译时间变长）
codegen-units = 1      # 单代码生成单元（提升优化效果）
strip = true           # 剥离调试信息（等价于手动 strip 命令）